<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".InicioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#EEF6FB"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center|center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nomAPP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="#7289DA"
                android:textColorLink="#FFFFFF"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:gravity="left|center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:gravity="center"
                android:text="@string/mis_proyectos"
                android:textColor="#424549"
                android:textSize="35sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:background="#EEF6FB"
        android:gravity="bottom|right"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnProyecto1"
                android:layout_marginVertical="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/proyecto_1"
                android:backgroundTint="#7289DA"
                android:textColor="@color/white"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/btnProyecto2"
                android:layout_marginVertical="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/proyecto_2"
                android:backgroundTint="#7289DA"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnProyecto3"
                android:layout_marginVertical="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/proyecto_3"
                android:backgroundTint="#7289DA"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnNProyecto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:backgroundTint="#7289DA"
            android:text="@string/nuevo_proyecto"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.2"
        android:background="#EEF6FB"
        android:gravity="center_vertical"

        android:orientation="horizontal">

        <Button
            android:id="@+id/btnMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:backgroundTint="#FFD80C"
            android:text="@string/menu"
            android:textColor="@color/white"
            android:textSize="11sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnMTareas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:backgroundTint="#7289DA"
            android:text="@string/mis_tareas"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnNotificaciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:backgroundTint="#7289DA"
            android:text="@string/alerta"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnCuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:backgroundTint="#7289DA"
            android:text="@string/cuenta"
            android:textColor="@color/white"
            android:textSize="11sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>