<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnCerrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:backgroundTint="#7289da"
            android:text="X" />

        <TextView
            android:id="@+id/Titulo"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:text="@string/selecciona_un_proyecto"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnProyecto1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:backgroundTint="#7289da"
            android:gravity="center"
            android:text="@string/proyecto_1"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnProyecto2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:backgroundTint="#7289da"
            android:gravity="center"
            android:text="@string/proyecto_2"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnProyecto3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:backgroundTint="#7289da"
            android:gravity="center"
            android:text="@string/proyecto_3"
            android:textSize="24sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>