<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnCerrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#7289da"
            android:textColor="@android:color/background_light"
            android:layout_marginVertical="10dp"
            android:text="X" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="10dp"
            android:gravity="left|center_vertical"
            android:orientation="vertical">

            <EditText
                android:id="@+id/nombre"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"
                android:inputType="text"
                android:textSize="30dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="10dp"
            android:gravity="left|center_vertical"
            android:orientation="vertical">

            <EditText
                android:id="@+id/correo"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:hint="@string/correo"
                android:inputType="text"
                android:textSize="30dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="10dp"
            android:gravity="left|center_vertical"
            android:orientation="vertical">

            <EditText
                android:id="@+id/contraseña"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:hint="@string/contrase_a"
                android:inputType="textPassword"
                android:textSize="30dp" />

        </LinearLayout>

        <Button
            android:id="@+id/btnRegistrarse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#7289da"
            android:textColor="@android:color/background_light"
            android:gravity="center"
            android:text="@string/registrarse"
            android:textSize="24sp" />
    </LinearLayout>

</androidx.cardview.widget.CardView>