<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CuentaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#D1E1EC"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btnVolver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:backgroundTint="#7289DA"
                android:gravity="center"
                android:text="Atras"
                android:textColor="@color/white"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:gravity="center"
                android:text="@string/cuenta"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:background="#D1E1EC"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nombre de Usuario"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/btnCcontrasena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:backgroundTint="#7289DA"
            android:text="@string/cambiar_contrasena"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btnCerrarSesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:backgroundTint="#7289DA"
            android:text="@string/cerrar_sesion"
            android:textColor="@color/white"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#D1E1EC"
        android:gravity="center_vertical"

        android:orientation="horizontal">

        <Button
            android:id="@+id/btnMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFD80C"
            android:textColor="@color/white"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="3dp"
            android:layout_weight="1"
            android:text="@string/menu"
            android:textSize="11dp" />

        <Button
            android:id="@+id/btnMTareas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#000000"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:text="@string/mis_tareas"
            android:textSize="10dp" />

        <Button
            android:id="@+id/btnNotificaciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#000000"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:text="@string/alerta"
            android:textSize="10dp" />

        <Button
            android:id="@+id/btnCuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#000000"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:text="@string/cuenta"
            android:textSize="11dp" />
    </LinearLayout>

</LinearLayout>